# typst-beautiful-mermaid

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  test_output.txt
js/: build.js  entry.js  package-lock.json  package.json
src/: lib.rs
tests/: test.typ
typst-package/: lib.typ  typst.toml
