[package]
name = "rust-beautiful-mermaid"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rquickjs = { version = "0.11", default-features = false, features = ["classes", "macro"] }
wasm-minimal-protocol = "0.1"
base64 = "0.22"

[build-dependencies]
anyhow = "1"
regex = "1"
rquickjs = { version = "0.11", default-features = false }

[profile.release]
lto = "fat"
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
